// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pesquisa should match snapshot default 1`] = `
<body>
  <div>
    <div
      class="_tadashi_pesquisa svelte-ae7fdf"
    >
      <div
        class="_tadashi_pesquisa__target svelte-ae7fdf"
      >
         
      </div>
       
      <button
        class="_tadashi_pesquisa__trigger _tadashi_pesquisa__trigger___outline svelte-ae7fdf"
        type="button"
      >
        ✓
      </button>
    </div>
  </div>
</body>
`;

exports[`Pesquisa should match snapshot with slot 1`] = `
<body>
  <div>
    <div
      class="_tadashi_pesquisa svelte-ae7fdf"
    >
      <div
        class="_tadashi_pesquisa__target svelte-ae7fdf"
      >
        <input
          name="q"
          title="q"
          type="text"
        />
         
      </div>
       
      <button
        class="_tadashi_pesquisa__trigger _tadashi_pesquisa__trigger___outline svelte-ae7fdf"
        title="btn"
        type="button"
      >
        ✓
      </button>
    </div>
  </div>
</body>
`;

exports[`Pesquisa trigger should work 1`] = `
<button
  class="_tadashi_pesquisa__trigger _tadashi_pesquisa__trigger___outline svelte-ae7fdf"
  title="btn"
  type="button"
>
  ✓
</button>
`;

exports[`Pesquisa trigger should work 2`] = `
<input
  name="q"
  title="q"
  type="text"
/>
`;
